--- a/web/portal/bot_profile.html
+++ b/web/portal/bot_profile.html
@@ -169,11 +169,9 @@
                                         </div>
 
 
-                                        <div class="row">
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="customFile">
-                                                <label class="custom-file-label" for="customFile">Choose file</label>
-                                            </div>
+                                        <div class="file-upload">
+                                            <label for="upload" class="file-upload__label">Css only file upload button</label>
+                                            <input id="upload" class="file-upload__input" type="file" name="file-upload">
                                         </div>
 
                                         <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
@@ -265,7 +263,41 @@
 
 
 </body>
+<style>
+    /*****************************************
+  upload button styles
+******************************************/
+    .file-upload {
+        position: relative;
+        display: inline-block;
+    }
 
+    .file-upload__label {
+        display: block;
+        padding: 1em 2em;
+        color: #fff;
+        background: #222;
+        border-radius: .4em;
+        transition: background .3s;
+
+    &:hover {
+         cursor: pointer;
+         background: #000;
+     }
+    }
+
+    .file-upload__input {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        font-size: 1;
+        width:0;
+        height: 100%;
+        opacity: 0;
+    }
+</style>
 <!--   Core JS Files   -->
 <script src="assets/js/jquery.3.2.1.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
