--- a/web/portal/bot_user.html
+++ b/web/portal/bot_user.html
@@ -183,7 +183,7 @@
                                                 <h5 class="mb-0">
                                                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                                         <script>
-                                                          document.write(new Date().getFullYear())
+                                                          document.write(new Date())
                                                         </script>
                                                     </button>
                                                 </h5>
