--- a/web/portal/bot_profile.html
+++ b/web/portal/bot_profile.html
@@ -169,7 +169,7 @@
                                         </div>
 
 
-                                        <div class="file-upload">
+                                        <div class="er">
                                             <label for="upload" class="file-upload__label">Css only file upload button</label>
                                             <input id="upload" class="file-upload__input" type="file" name="file-upload">
                                         </div>
