--- a/web/portal/bot_profile.html
+++ b/web/portal/bot_profile.html
@@ -170,7 +170,7 @@
 
 
                                         <div class="file-upload">
-                                            <label for="upload" class="file-upload__label">Css only file upload button</label>
+                                            <label for="upload" class="file-upload__label">Bot Image</label>
                                             <input id="upload" class="file-upload__input" type="file" name="file-upload">
                                         </div>
 
