--- a/web/portal/bot_profile.html
+++ b/web/portal/bot_profile.html
@@ -169,9 +169,9 @@
                                         </div>
 
 
-                                        <div class="file-upload">
-                                            <label for="upload" class="file-upload__label">Bot Image</label>
-                                            <input id="upload" class="file-upload__input" type="file" name="file-upload">
+                                        <div class="#">
+                                            <label for="upload" class="#">Bot Image</label>
+                                            <input id="upload" class="#" type="file" name="file-upload">
                                         </div>
 
                                         <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
