--- a/web/portal/add_admin.html
+++ b/web/portal/add_admin.html
@@ -223,8 +223,8 @@
                     <p class="copyright pull-right">
                         &copy;
                         <script>
-                            document.write(new Date().getFullYear())
-                        </script> <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+                          document.write(new Date().getFullYear())
+                        </script> <a href="#">Sourcebot</a>
                     </p>
                 </div>
             </footer>
