--- a/web/portal/admins.html
+++ b/web/portal/admins.html
@@ -155,7 +155,7 @@
                             <div class="card card-plain">
                                 <div class="header">
                                     <h4 class="title">Admins</h4>
-                                    <a href="add_admin.html" class="btn btn-info btn-fill pull-right">Create New User</a>
+                                    <a href="add_admin.php" class="btn btn-info btn-fill pull-right">Create New User</a>
 
                                 </div>
                                 <div class="content table-responsive table-full-width">
